--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,7 +51,7 @@
                                             <input type="password" class="form-control form-control-user"
                                                 id="exampleInputPassword" placeholder="Password">
                                         </div>
-                                        <button class="btn btn-primary btn-user btn-block">
+                                        <button id="btnLogin" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </button>
                                     </form>
